--- a/src/translation/de.json
+++ b/src/translation/de.json
@@ -34,6 +34,10 @@
         "3-Weg"
       ]
     },
-    "dnTitle": "Nennweite"
+    "dnTitle": "Nennweite",
+    "article": "Artikel",
+    "amount": "Anzahl",
+    "price": "Preis",
+    "vatInformation": "netto, exkl. MwSt"
   }
 }
