Fix translation errors

--- a/src/translation/de.json
+++ b/src/translation/de.json
@@ -7,6 +7,7 @@
     "descriptionVL": "Vorlauftemperatur-Fühler",
     "descriptionAT": "Aussentemperatur-Fühler",
     "descriptionAKM": "2- oder 3-Wege Regelkugelhahn inkl.",
+    "linkTextAKM": "Drehantrieb AKM",
     "jumbotron": "Bereits ab 570.-",
     "orderButton": "Zur Bestellung",
     "schema": "Schema",
